# auto-proto

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  format.sh
protos/: CMakeLists.txt
protos/proto/proj/: annotations.proto  server.proto  state.proto
protos/thirdparty_src/: proto_reflection_descriptor_database.cc  proto_reflection_descriptor_database.h
src/: client.cpp  client_and_server.cpp  generic_stream_test.cpp  proj_config.h.in  server.cpp
src/client/: auto_gui.cpp  auto_gui.h  cli_client.cpp  cli_client.h  gui.cpp  gui.h  gui_client.cpp  gui_client.h  imgui_util.cpp  imgui_util.h  message_tree.cpp  message_tree.h  proto_gui.cpp  proto_gui.h  theme.cpp  theme.h
src/server/: compute_functions.cpp  compute_functions.h  server.cpp  server.h  server_tree.cpp  server_tree.h  server_util.cpp  server_util.h  stream_handler.cpp  stream_handler.h
src/testing/: util_tests.cpp
src/util/: atomic_data.h  blocking_deque.h  generic_guard.h  message_util.cpp  message_util.h  semaphore.cpp  semaphore.h  util.cpp  util.h
